# llm-behavior-lab

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  README.md  TODO.md  pyproject.toml
docs/: behavioral-tasks.md  experiment-workflow.md  feat-behavioural-tasks.md  feat-questionnaire-cli-discovery.md  feat-questionnaire-scoring.md  iowa-gambling-task.md  questionnaire-scoring.md
docs/superpowers/plans/: 2026-06-04-pdmi-questionnaire.md  2026-06-05-status-consumption-scale.md  2026-06-11-resumable-concurrent-execution.md
docs/superpowers/specs/: 2026-06-11-resumable-concurrent-execution-design.md
examples/: README.md
examples/ollama-bfi10-factorial/: README.md  notebook.py  protocol.json
feats/: feat-experiment-storage-format.md  feat-multi-model-benchmarks.md  feat-protocol-range-sampling.md  feat-questionnaire-cli-discovery.md  feat-research-quality-diagnostics.md  feat-resumable-concurrent-execution.md
src/llm_behavior_lab/: __init__.py  analysis.py  client.py  config.py  experiments.py  main.py  models.py  prompting.py  protocol_runs.py  protocols.py  runner.py  storage.py
src/llm_behavior_lab/behavioral_tasks/: __init__.py  analysis.py  base.py  batch.py  catalog.py  iowa_gambling.py  runner.py
src/llm_behavior_lab/personas/: __init__.py  factory.py  value_specs.py
src/llm_behavior_lab/preference_tests/: __init__.py  analysis.py  models.py  prompting.py  runner.py
src/llm_behavior_lab/prompts/: pairwise_preference.j2  persona_intro.j2
src/llm_behavior_lab/questionnaires/: __init__.py  catalog.py
src/llm_behavior_lab/responses/: __init__.py  item_ledgers.py
src/llm_behavior_lab/scoring/: __init__.py  engine.py  models.py  reliability.py  results.py  run.py
src/llm_psych_scales/: __init__.py  analysis.py  client.py  config.py  main.py  models.py  prompting.py  protocols.py  runner.py  storage.py
src/llm_psych_scales/personas/: dimensions.py  (+1 more)
tests/examples/: test_ollama_bfi10_factorial.py
tests/llm_behavior_lab/: test_analysis.py  test_batch_runner.py  test_client.py  test_experiment_workflow.py  test_experiments.py  test_main.py  test_models.py  test_package.py  test_prompting.py  test_protocols.py  test_runner.py  test_storage.py  test_unified_protocol.py
tests/llm_psych_scales/: test_analysis.py  test_batch_runner.py  test_client.py  test_main.py  test_models.py  test_package.py  test_prompting.py  test_protocols.py  test_runner.py  test_storage.py
(+56 files in other folders)
