[project]
name = "llm-behavior-lab"
version = "0.1.0"
description = "Run persona-based LLM questionnaire and behavioral-task experiments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "friendlywords>=1.2.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "openai>=1.84.0",
    "pingouin>=0.6.1",
    "pycountry>=26.2.16",
    "pydantic>=2.11.5",
]

[project.scripts]
llm-behavior-lab = "llm_behavior_lab.main:main"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "detect-secrets>=1.5.0",
    "prek>=0.4.3",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
    "ty>=0.0.1a8",
]
examples = [
    "marimo>=0.23.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_behavior_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
exclude = [
    "src/llm_behavior_lab/.personas_root_owned_backup",
]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.12"
root = ["src", "tests"]
